--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+main{
+  padding: 0 10px;
+}
+.clearboth{
+  clear: both;
+}
 #tarja{
     width: 100%;
     height: 30px;
@@ -7,8 +13,8 @@
 #lista-topo{
   margin-left: 22%;
 }
-ul li#selected{
-
+a.selected{
+  color: blue!important;
 }
 ul li#selected,ul#lista-topo li:active {
   color: blue!important;
@@ -23,15 +29,54 @@ ul#lista-topo li{
   padding: 0 8px 18px 8px;
   
 }
-
+/* div#principal{
+  box-shadow: 10px 5px 30px #888888;
+} */
 div#banner{
   width: 100%;
-
+  z-index: 999;
   background: url(imagens/banner-fifa.png) top no-repeat;
-  margin: 30px 0px;
+  margin: 30px 0 0 0;
   background-size: 100%;
   min-height: 400px;  
   
+}
+div.sub-banner {
+padding: 10px;
+margin-top: -20px;
+box-shadow: 0px 8px 27px 6px rgba(107,107,107,0.55);
+z-index: -999;
+}
+
+div.sub-banner a{
+  border-radius: 50px;
+  
+}
+.card-jogo{
+  margin: 10px 0;
+}
+.card-jogo img{
+  height: auto;
+  max-width: 100%;
+  border-radius: 10px;
+}
+.card-jogo img:hover{
+  -webkit-filter:grayscale(30%);
+  
+}
+
+button#veja-mais{
+background-color:#ffffff;
+color: blue;
+border-radius: 20px;
+border: none;
+padding: 5px 10px;
+}
+
+
+button#veja-mais:hover{
+background-color:#c5c5c5;
+
 }
 
 @media screen and (max-width:700px) {
@@ -40,7 +85,11 @@ div#banner{
     min-height: 200px;
   }
 }
-
+/* @media  screen and (max-width:480px) {
+  .card-jogo img{
+    max-width: ;
+  }
+} */
 @media screen and (max-width: 600px) {
     div#tarja {
       display: none;
